--- a/package.json
+++ b/package.json
@@ -73,6 +73,10 @@
                 "description": "Deployment port of tomcat",
                 "default": 8080
               },
+              "javaHome": {
+                "type": "string",
+                "description": "java home to use for this tomcat"
+              },
               "logs": {
                 "type": "array",
                 "items": {
