Feature/custom logs (#21)
* adds custom log files option

* adds java home option

--- a/package.json
+++ b/package.json
@@ -76,6 +76,24 @@
               "javaHome": {
                 "type": "string",
                 "description": "java home to use for this tomcat"
+              },
+              "logs": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "title": "Log Locations",
+                  "required": ["name", "path"],
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "description": "Name of log (to be presented as an option)"
+                    },
+                    "path": {
+                      "type": "string",
+                      "description": "Log file path"
+                    }
+                  }
+                }
               }
             }
           },
